Primera maqueta del website.

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,8 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "No se encuentra la página"
+excerpt: "No se encuentra la página, su asunto está en otro lado."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Lo siento, pero la página que está tratando de ver no existe.
